--- a/docs/_locales/pl/_theme.json
+++ b/docs/_locales/pl/_theme.json
@@ -1,14 +1,14 @@
 {
     "name": "Przykład PXT",
     "title": "Przykładowe Doświadczenie PXT",
-        "docMenu": [
-            {
-                "name": "About",
-                "path": "/about"
-            },
-            {
-                "name": "Docs",
-                "path": "/docs"
-            }
-        ]
+    "docMenu": [
+        {
+            "name": "O nas",
+            "path": "/about"
+        },
+        {
+            "name": "Dokumentacja",
+            "path": "/docs"
+        }
+    ]
 }
