moving default projects to proper location

--- a/libs/core/_locales/core-strings.json
+++ b/libs/core/_locales/core-strings.json
@@ -8,14 +8,14 @@
   "String.length|block": "length of %VALUE",
   "String.substr|block": "substring of %this|from %start|of length %length",
   "String|block": "String",
-  "basic.forever|block": "forever",
-  "basic.forward|block": "forward %steps",
-  "basic.pause|block": "pause (ms) %pause",
-  "basic.turn|block": "turn %direction|by %angle degrees",
-  "basic|block": "basic",
   "console|block": "console",
-  "{id:category}Basic": "Basic",
+  "drawing.forever|block": "forever",
+  "drawing.forward|block": "forward %steps",
+  "drawing.pause|block": "pause (ms) %pause",
+  "drawing.turn|block": "turn %direction|by %angle degrees",
+  "drawing|block": "drawing",
   "{id:category}Console": "Console",
+  "{id:category}Drawing": "Drawing",
   "{id:category}Math": "Math",
   "{id:category}String": "String",
   "{id:category}Text": "Text"
