fixed default param

--- a/libs/core/_locales/core-jsdoc-strings.json
+++ b/libs/core/_locales/core-jsdoc-strings.json
@@ -35,5 +35,6 @@
   "turtle.forward": "Moves the sprite forward",
   "turtle.forward|param|steps": "number of steps to move, eg: 1",
   "turtle.turn": "Moves the sprite forward",
-  "turtle.turn|param|angle": "degrees to turn, eg:90"
+  "turtle.turn|param|angle": "degrees to turn, eg:90",
+  "turtle.turn|param|direction": "the direction to turn, eg: Direction.Left"
 }
