--- a/libs/core/_locales/core-strings.json
+++ b/libs/core/_locales/core-strings.json
@@ -2,24 +2,25 @@
   "Direction.Left|block": "left",
   "Direction.Right|block": "right",
   "Math|block": "Math",
-  "String.charAt|block": "char from %this|at %pos",
-  "String.compare|block": "compare %this| to %that",
-  "String.concat|block": "join %this|%other",
+  "String.charAt|block": "char from %this=text|at %pos",
+  "String.compare|block": "compare %this=text| to %that",
   "String.fromCharCode|block": "text from char code %code",
-  "String.isEmpty|block": "%this| is empty",
   "String.length|block": "length of %VALUE",
-  "String.substr|block": "substring of %this|from %start|of length %length",
+  "String.substr|block": "substring of %this=text|from %start|of length %length",
   "String|block": "String",
   "console|block": "console",
   "control.forever|block": "forever",
   "control.pause|block": "pause (ms) %pause",
   "control|block": "control",
+  "sprites.createSprite|block": "create sprite",
+  "sprites|block": "sprites",
   "turtle.forward|block": "forward %steps",
   "turtle.turn|block": "turn %direction|by %angle degrees",
   "turtle|block": "turtle",
   "{id:category}Console": "Console",
   "{id:category}Control": "Control",
   "{id:category}Math": "Math",
+  "{id:category}Sprites": "Sprites",
   "{id:category}String": "String",
   "{id:category}Text": "Text",
   "{id:category}Turtle": "Turtle"
