moving forever/onstart

--- a/libs/core/_locales/core-strings.json
+++ b/libs/core/_locales/core-strings.json
@@ -9,16 +9,16 @@
   "String.substr|block": "substring of %this=text|from %start|of length %length",
   "String|block": "String",
   "console|block": "console",
-  "control.forever|block": "forever",
-  "control.pause|block": "pause (ms) %pause",
-  "control|block": "control",
+  "loops.forever|block": "forever",
+  "loops.pause|block": "pause (ms) %pause",
+  "loops|block": "loops",
   "sprites.createSprite|block": "create sprite",
   "sprites|block": "sprites",
   "turtle.forward|block": "forward|steps %steps",
   "turtle.turn|block": "turn %direction|by %angle degrees",
   "turtle|block": "turtle",
   "{id:category}Console": "Console",
-  "{id:category}Control": "Control",
+  "{id:category}Loops": "Loops",
   "{id:category}Math": "Math",
   "{id:category}Sprites": "Sprites",
   "{id:category}String": "String",
