--- a/libs/core/_locales/core-jsdoc-strings.json
+++ b/libs/core/_locales/core-jsdoc-strings.json
@@ -40,11 +40,10 @@
   "String.substr|param|length": "number of characters to extract",
   "String.substr|param|start": "first character index; can be negative from counting from the end, eg:0",
   "console.log": "Print out message",
-  "control": "Control flow",
-  "control.forever": "Repeats the code forever in the background. On each iteration, allows other code to run.",
-  "control.forever|param|body": "TODO",
-  "control.pause": "Pause for the specified time in milliseconds",
-  "control.pause|param|ms": "how long to pause for, eg: 100, 200, 500, 1000, 2000",
+  "loops.forever": "Repeats the code forever in the background. On each iteration, allows other code to run.",
+  "loops.forever|param|body": "the code to repeat",
+  "loops.pause": "Pause for the specified time in milliseconds",
+  "loops.pause|param|ms": "how long to pause for, eg: 100, 200, 500, 1000, 2000",
   "sprites.createSprite": "Creates a new sprite",
   "turtle": "Basic functionalities.",
   "turtle.forward": "Moves the sprite forward",
