--- a/libs/core/_locales/core-strings.json
+++ b/libs/core/_locales/core-strings.json
@@ -1,4 +1,14 @@
 {
+  "Array.indexOf|block": "%list| find index of %value",
+  "Array.insertAt|block": "%list| insert at %index| value %value",
+  "Array.length|block": "length of %VALUE",
+  "Array.pop|block": "get and remove last value from %list",
+  "Array.push|block": "%list| add value %value| to end",
+  "Array.removeAt|block": "%list| remove value at %index",
+  "Array.reverse|block": "reverse %list",
+  "Array.shift|block": "get and remove first value from %list",
+  "Array.unshift|block": "%list| insert %value| at beginning",
+  "Array|block": "Array",
   "Direction.Left|block": "left",
   "Direction.Right|block": "right",
   "Math.randomRange|block": "pick random %min|to %limit",
@@ -18,6 +28,8 @@
   "turtle.forward|block": "forward|steps %steps",
   "turtle.turn|block": "turn %direction|by %angle degrees",
   "turtle|block": "turtle",
+  "{id:category}Array": "Array",
+  "{id:category}Arrays": "Arrays",
   "{id:category}Console": "Console",
   "{id:category}Loops": "Loops",
   "{id:category}Math": "Math",
