--- a/libs/core/_locales/core-strings.json
+++ b/libs/core/_locales/core-strings.json
@@ -1,4 +1,8 @@
 {
+  "AirSimImageType.Depth|block": "depth",
+  "AirSimImageType.Off|block": "off",
+  "AirSimImageType.Scene|block": "scene",
+  "AirSimImageType.Segmentation|block": "segmentation",
   "Array.indexOf|block": "%list| find index of %value",
   "Array.insertAt|block": "%list| insert at %index| value %value",
   "Array.length|block": "length of %VALUE",
@@ -9,8 +13,8 @@
   "Array.shift|block": "get and remove first value from %list",
   "Array.unshift|block": "%list| insert %value| at beginning",
   "Array|block": "Array",
-  "Direction.Left|block": "left",
-  "Direction.Right|block": "right",
+  "DrivetrainType.ForwardOnly|block": "forward only",
+  "DrivetrainType.MaxDegreeOfFreedom|block": "max degree of freedom",
   "Math.randomRange|block": "pick random %min|to %limit",
   "Math|block": "Math",
   "String.charAt|block": "char from %this=text|at %pos",
