--- a/libs/core/_locales/core-strings.json
+++ b/libs/core/_locales/core-strings.json
@@ -23,18 +23,22 @@
   "String.length|block": "length of %VALUE",
   "String.substr|block": "substring of %this=text|from %start|of length %length",
   "String|block": "String",
-  "airsim.drone|block": "drone",
-  "airsim|block": "airsim",
   "console|block": "console",
   "loops.forever|block": "forever",
   "loops.pause|block": "pause (ms) %pause",
   "loops|block": "loops",
-  "{id:category}Airsim": "Airsim",
+  "sprites.createSprite|block": "create sprite",
+  "sprites|block": "sprites",
+  "turtle.forward|block": "forward|steps %steps",
+  "turtle.turn|block": "turn %direction|by %angle degrees",
+  "turtle|block": "turtle",
   "{id:category}Array": "Array",
   "{id:category}Arrays": "Arrays",
   "{id:category}Console": "Console",
   "{id:category}Loops": "Loops",
   "{id:category}Math": "Math",
+  "{id:category}Sprites": "Sprites",
   "{id:category}String": "String",
-  "{id:category}Text": "Text"
+  "{id:category}Text": "Text",
+  "{id:category}Turtle": "Turtle"
 }
