--- a/libs/core/_locales/core-strings.json
+++ b/libs/core/_locales/core-strings.json
@@ -1,8 +1,4 @@
 {
-  "AirSimImageType.Depth|block": "depth",
-  "AirSimImageType.Off|block": "off",
-  "AirSimImageType.Scene|block": "scene",
-  "AirSimImageType.Segmentation|block": "segmentation",
   "Array.indexOf|block": "%list| find index of %value",
   "Array.insertAt|block": "%list| insert at %index| value %value",
   "Array.length|block": "length of %VALUE",
@@ -13,8 +9,8 @@
   "Array.shift|block": "get and remove first value from %list",
   "Array.unshift|block": "%list| insert %value| at beginning",
   "Array|block": "Array",
-  "DrivetrainType.ForwardOnly|block": "forward only",
-  "DrivetrainType.MaxDegreeOfFreedom|block": "max degree of freedom",
+  "Direction.Left|block": "left",
+  "Direction.Right|block": "right",
   "Math.randomRange|block": "pick random %min|to %limit",
   "Math|block": "Math",
   "String.charAt|block": "char from %this=text|at %pos",
@@ -27,18 +23,11 @@
   "loops.forever|block": "forever",
   "loops.pause|block": "pause (ms) %pause",
   "loops|block": "loops",
-  "sprites.createSprite|block": "create sprite",
-  "sprites|block": "sprites",
-  "turtle.forward|block": "forward|steps %steps",
-  "turtle.turn|block": "turn %direction|by %angle degrees",
-  "turtle|block": "turtle",
   "{id:category}Array": "Array",
   "{id:category}Arrays": "Arrays",
   "{id:category}Console": "Console",
   "{id:category}Loops": "Loops",
   "{id:category}Math": "Math",
-  "{id:category}Sprites": "Sprites",
   "{id:category}String": "String",
-  "{id:category}Text": "Text",
-  "{id:category}Turtle": "Turtle"
+  "{id:category}Text": "Text"
 }
