--- a/libs/core/_locales/core-strings.json
+++ b/libs/core/_locales/core-strings.json
@@ -23,6 +23,7 @@
   "loops.forever|block": "forever",
   "loops.pause|block": "pause (ms) %pause",
   "loops|block": "loops",
+  "parseInt|block": "parse to integer %text",
   "sprites.createSprite|block": "create sprite",
   "sprites|block": "sprites",
   "turtle.forward|block": "forward|steps %steps",
@@ -30,9 +31,13 @@
   "turtle|block": "turtle",
   "{id:category}Array": "Array",
   "{id:category}Arrays": "Arrays",
+  "{id:category}Boolean": "Boolean",
   "{id:category}Console": "Console",
+  "{id:category}Helpers": "Helpers",
   "{id:category}Loops": "Loops",
   "{id:category}Math": "Math",
+  "{id:category}Number": "Number",
+  "{id:category}Sprite": "Sprite",
   "{id:category}Sprites": "Sprites",
   "{id:category}String": "String",
   "{id:category}Text": "Text",
