--- a/libs/core/_locales/core-strings.json
+++ b/libs/core/_locales/core-strings.json
@@ -27,6 +27,7 @@
   "sprites.createSprite|block": "create sprite",
   "sprites|block": "sprites",
   "turtle.forward|block": "forward|steps %steps",
+  "turtle.onBump|block": "on bump",
   "turtle.turn|block": "turn %direction|by %angle degrees",
   "turtle|block": "turtle",
   "{id:category}Array": "Array",
