--- a/libs/core/_locales/core-strings.json
+++ b/libs/core/_locales/core-strings.json
@@ -9,8 +9,6 @@
   "Array.shift|block": "get and remove first value from %list",
   "Array.unshift|block": "%list| insert %value| at beginning",
   "Array|block": "Array",
-  "Direction.Left|block": "left",
-  "Direction.Right|block": "right",
   "Math.randomRange|block": "pick random %min|to %limit",
   "Math|block": "Math",
   "String.charAt|block": "char from %this=text|at %pos",
@@ -19,28 +17,27 @@
   "String.length|block": "length of %VALUE",
   "String.substr|block": "substring of %this=text|from %start|of length %length",
   "String|block": "String",
-  "console|block": "console",
+  "five|block": "five",
   "loops.forever|block": "forever",
   "loops.pause|block": "pause (ms) %pause",
   "loops|block": "loops",
+  "messaging.receive|block": "when I receive key %key|do",
+  "messaging.send|block": "send key %key| value %value| to %id",
+  "messaging|block": "messaging",
   "parseInt|block": "parse to integer %text",
-  "sprites.createSprite|block": "create sprite",
-  "sprites|block": "sprites",
-  "turtle.forward|block": "forward|steps %steps",
-  "turtle.onBump|block": "on bump",
-  "turtle.turn|block": "turn %direction|by %angle degrees",
-  "turtle|block": "turtle",
   "{id:category}Array": "Array",
   "{id:category}Arrays": "Arrays",
   "{id:category}Boolean": "Boolean",
-  "{id:category}Console": "Console",
+  "{id:category}Five": "Five",
+  "{id:category}Grove": "Grove",
   "{id:category}Helpers": "Helpers",
   "{id:category}Loops": "Loops",
   "{id:category}Math": "Math",
+  "{id:category}Messaging": "Messaging",
+  "{id:category}Mypi": "Mypi",
   "{id:category}Number": "Number",
-  "{id:category}Sprite": "Sprite",
-  "{id:category}Sprites": "Sprites",
+  "{id:category}Options": "Options",
   "{id:category}String": "String",
-  "{id:category}Text": "Text",
-  "{id:category}Turtle": "Turtle"
+  "{id:category}TestExpandedoptions": "TestExpandedoptions",
+  "{id:category}Text": "Text"
 }
