filled in config class but nonfunctional, committing to do some experimentation

--- a/libs/core/_locales/core-strings.json
+++ b/libs/core/_locales/core-strings.json
@@ -37,7 +37,7 @@
   "{id:category}Mypi": "Mypi",
   "{id:category}Number": "Number",
   "{id:category}Options": "Options",
+  "{id:category}PiOptions": "PiOptions",
   "{id:category}String": "String",
-  "{id:category}TestExpandedoptions": "TestExpandedoptions",
   "{id:category}Text": "Text"
 }
