grove config blocks are finished and send appropriate messages

--- a/libs/groveconfig/_locales/groveconfig-strings.json
+++ b/libs/groveconfig/_locales/groveconfig-strings.json
@@ -1,17 +1,22 @@
 {
-  "AnalogDeviceType.Led|block": "led",
-  "AnalogDeviceType.Moisture|block": "moisture",
-  "AnalogDeviceType.UltrasonicSensor|block": "ultrasonic sensor",
-  "DigitalDeviceType.Button|block": "button",
-  "DigitalDeviceType.WaterSensor|block": "water sensor",
+  "AnalogDeviceType.lightSensor|block": "light sensor",
+  "AnalogDeviceType.moistureSensor|block": "moisture",
+  "AnalogDeviceType.slidePot|block": "slide potentiometer",
+  "AnalogDeviceType.soundSensor|block": "sound sensor",
+  "DigitalDeviceType.LED|block": "LED",
+  "DigitalDeviceType.button|block": "button",
+  "DigitalDeviceType.buzzer|block": "buzzer",
+  "DigitalDeviceType.relay|block": "relay",
+  "DigitalDeviceType.temHum|block": "temp/humidity sensor",
+  "DigitalDeviceType.ultrasonic|block": "ultrasonic sensor",
+  "DigitalDeviceType.waterSensor|block": "water sensor",
   "groveconfig.AnalogPort.setPort|block": "set %this to device %type",
   "groveconfig.DigitalPort.setDigPort|block": "set %this to device %type",
   "groveconfig.PWMPort.setPWMPort|block": "set %this to device %type",
-  "groveconfig.aPort1|block": "Analog Port 1",
-  "groveconfig.aPort2|block": "Analog Port 2",
-  "groveconfig.aPort3|block": "Analog Port 3",
+  "groveconfig.aPort1|block": "Analog Port 0",
+  "groveconfig.aPort2|block": "Analog Port 1",
+  "groveconfig.aPort3|block": "Analog Port 2",
   "groveconfig.dPort2|block": "Digital Port 2",
-  "groveconfig.dPort3|block": "Digital Port 3",
   "groveconfig.dPort4|block": "Digital Port 4",
   "groveconfig.dPort7|block": "Digital Port 7",
   "groveconfig.dPort8|block": "Digital Port 8",
