--- a/libs/core/_locales/core-jsdoc-strings.json
+++ b/libs/core/_locales/core-jsdoc-strings.json
@@ -90,10 +90,6 @@
   "Math.trunc": "Returns the number with the decimal part truncated.",
   "Math.trunc|param|x": "A numeric expression.",
   "Number.toString": "Returns a string representation of a number.",
-  "Sprite": "A ghost on the screen.",
-  "Sprite.forward": "Move the thing forward",
-  "Sprite.x": "The X-coordiante",
-  "Sprite.y": "The Y-coordiante",
   "String": "Combine, split, and search text strings.\n\nCombine, split, and search text strings.",
   "String.charAt": "Return the character at the specified index.",
   "String.charAt|param|index": "The zero-based index of the desired character.",
@@ -110,18 +106,9 @@
   "String.substr|param|length": "number of characters to extract",
   "String.substr|param|start": "first character index; can be negative from counting from the end, eg:0",
   "console.log": "Print out message",
-  "hare.hop": "This is hop",
   "loops.forever": "Repeats the code forever in the background. On each iteration, allows other code to run.",
   "loops.forever|param|body": "the code to repeat",
   "loops.pause": "Pause for the specified time in milliseconds",
   "loops.pause|param|ms": "how long to pause for, eg: 100, 200, 500, 1000, 2000",
-  "parseInt": "Convert a string to an integer.",
-  "sprites.createSprite": "Creates a new sprite",
-  "turtle": "Basic functionalities.",
-  "turtle.forward": "Moves the sprite forward",
-  "turtle.forward|param|steps": "number of steps to move, eg: 1",
-  "turtle.onBump": "Triggers when the turtle bumps a wall",
-  "turtle.turn": "Moves the sprite forward",
-  "turtle.turn|param|angle": "degrees to turn, eg:90",
-  "turtle.turn|param|direction": "the direction to turn, eg: Direction.Left"
+  "parseInt": "Convert a string to an integer."
 }
