--- a/libs/core/_locales/core-strings.json
+++ b/libs/core/_locales/core-strings.json
@@ -9,13 +9,6 @@
   "Array.shift|block": "get and remove first value from %list",
   "Array.unshift|block": "%list| insert %value| at beginning",
   "Array|block": "Array",
-  "Direction.Left|block": "left",
-  "Direction.Right|block": "right",
-  "Hop.Astronomical|block": "to the moon!",
-  "Hop.Incredible|block": "wow",
-  "Hop.Long|block": "long",
-  "Hop.Short|block": "short",
-  "Hop.Silly|block": "silly",
   "Math.randomRange|block": "pick random %min|to %limit",
   "Math|block": "Math",
   "String.charAt|block": "char from %this=text|at %pos",
@@ -25,31 +18,18 @@
   "String.substr|block": "substring of %this=text|from %start|of length %length",
   "String|block": "String",
   "console|block": "console",
-  "hare.hop|block": "hop %hop on color %color=colorNumberPicker",
-  "hare.onLand|block": "on land",
-  "hare|block": "hare",
   "loops.forever|block": "forever",
   "loops.pause|block": "pause (ms) %pause",
   "loops|block": "loops",
   "parseInt|block": "parse to integer %text",
-  "sprites.createSprite|block": "createSprite",
-  "sprites|block": "sprites",
-  "turtle.forward|block": "forward %steps",
-  "turtle.onBump|block": "on bump",
-  "turtle.turn|block": "turn %direction|by %angle degrees",
-  "turtle|block": "turtle",
   "{id:category}Array": "Array",
   "{id:category}Arrays": "Arrays",
   "{id:category}Boolean": "Boolean",
   "{id:category}Console": "Console",
-  "{id:category}Hare": "Hare",
   "{id:category}Helpers": "Helpers",
   "{id:category}Loops": "Loops",
   "{id:category}Math": "Math",
   "{id:category}Number": "Number",
-  "{id:category}Sprite": "Sprite",
-  "{id:category}Sprites": "Sprites",
   "{id:category}String": "String",
-  "{id:category}Text": "Text",
-  "{id:category}Turtle": "Turtle"
+  "{id:category}Text": "Text"
 }
