Added PeerJS code, updated netsimple to use it.
Signed-off-by: William Temple <William.Temple@colorado.edu>

--- a/libs/core/_locales/core-strings.json
+++ b/libs/core/_locales/core-strings.json
@@ -22,6 +22,7 @@
   "loops.pause|block": "pause (ms) %pause",
   "loops|block": "loops",
   "parseInt|block": "parse to integer %text",
+  "peer|block": "peer",
   "{id:category}Array": "Array",
   "{id:category}Arrays": "Arrays",
   "{id:category}Boolean": "Boolean",
@@ -30,6 +31,7 @@
   "{id:category}Loops": "Loops",
   "{id:category}Math": "Math",
   "{id:category}Number": "Number",
+  "{id:category}Peer": "Peer",
   "{id:category}String": "String",
   "{id:category}Text": "Text"
 }
