--- a/libs/core/_locales/core-jsdoc-strings.json
+++ b/libs/core/_locales/core-jsdoc-strings.json
@@ -110,5 +110,8 @@
   "loops.forever|param|body": "the code to repeat",
   "loops.pause": "Pause for the specified time in milliseconds",
   "loops.pause|param|ms": "how long to pause for, eg: 100, 200, 500, 1000, 2000",
-  "parseInt": "Convert a string to an integer."
+  "parseInt": "Convert a string to an integer.",
+  "peer.onReceive": "Allows user to define callbacks for receive event",
+  "peer.send": "Peer",
+  "peer.send|param|id": "The value of the marker"
 }
