Imported j5-based server implementation to refactored pxt-pi. Refactored rpcCall methods. Removed Johnny Five references. Added more coherent options API for RPC mechanism   - Make it easier to add dynamic message options,     and made the message payloads more RPC-like Unified grove namespaces
Signed-off-by: William Temple <William.Temple@colorado.edu>
Co-authored-by: Adam Siefkas <aeos42@gmail.com>
Co-authored-by: Tanner Quigley <TannerQuigley@me.com>

--- a/libs/core/_locales/core-strings.json
+++ b/libs/core/_locales/core-strings.json
@@ -22,6 +22,7 @@
   "loops.pause|block": "pause (ms) %pause",
   "loops|block": "loops",
   "parseInt|block": "parse to integer %text",
+  "pi|block": "pi",
   "{id:category}Array": "Array",
   "{id:category}Arrays": "Arrays",
   "{id:category}Boolean": "Boolean",
@@ -32,6 +33,7 @@
   "{id:category}Network": "Network",
   "{id:category}Number": "Number",
   "{id:category}Packet": "Packet",
+  "{id:category}Pi": "Pi",
   "{id:category}String": "String",
   "{id:category}Text": "Text"
 }
