--- a/libs/core/_locales/core-jsdoc-strings.json
+++ b/libs/core/_locales/core-jsdoc-strings.json
@@ -110,5 +110,6 @@
   "loops.forever|param|body": "the code to repeat",
   "loops.pause": "Pause for the specified time in milliseconds",
   "loops.pause|param|ms": "how long to pause for, eg: 100, 200, 500, 1000, 2000",
-  "parseInt": "Convert a string to an integer."
+  "parseInt": "Convert a string to an integer.",
+  "pi.rpcCall": "Executes an RPC call into the Raspberry Pi"
 }
