set LED brightness block (WIP: need to convert to int)

--- a/libs/grove/_locales/grove-jsdoc-strings.json
+++ b/libs/grove/_locales/grove-jsdoc-strings.json
@@ -3,6 +3,8 @@
   "grove.AnalogPort.setPort": "Configure a port",
   "grove.DigitalPort": "digport",
   "grove.DigitalPort.setDigPort": "Configure a digital port",
+  "grove.FadeLED": "FadeLED",
+  "grove.FadeLED.fadeLED": "Change LED brightness at port",
   "grove.LEDPi": "LEDpi",
   "grove.LEDPi.setLED": "Turn on an LED at port",
   "grove.PWMPort": "digPWMport",
