--- a/libs/grove/_locales/grove-strings.json
+++ b/libs/grove/_locales/grove-strings.json
@@ -12,6 +12,7 @@
   "DigitalDeviceType.WATERSENSOR|block": "water sensor",
   "grove.AnalogPort.setPort|block": "set %this to device %type",
   "grove.DigitalPort.setDigPort|block": "set %this to device %type",
+  "grove.FadeLED.fadeLED|block": "set %this brightness to %val",
   "grove.LEDPi.setLED|block": "set %this to value %on",
   "grove.PWMPort.setPWMPort|block": "set %this to device %type",
   "grove.aPort1|block": "Analog Port 0",
@@ -21,14 +22,17 @@
   "grove.dPort4|block": "Digital Port 4",
   "grove.dPort7|block": "Digital Port 7",
   "grove.dPort8|block": "Digital Port 8",
+  "grove.fadePort3|block": "LED Port 3",
+  "grove.fadePort5|block": "LED Port 5",
+  "grove.fadePort6|block": "LED Port 6",
   "grove.onButtonPress|block": "on button press",
-  "grove.port2|block": "LED Port 2",
-  "grove.port3|block": "LED Port 3",
-  "grove.port4|block": "LED Port 4",
-  "grove.port5|block": "LED Port 5",
-  "grove.port6|block": "LED Port 6",
-  "grove.port7|block": "LED Port 7",
-  "grove.port8|block": "LED Port 8",
+  "grove.onPort2|block": "LED Port 2",
+  "grove.onPort3|block": "LED Port 3",
+  "grove.onPort4|block": "LED Port 4",
+  "grove.onPort5|block": "LED Port 5",
+  "grove.onPort6|block": "LED Port 6",
+  "grove.onPort7|block": "LED Port 7",
+  "grove.onPort8|block": "LED Port 8",
   "grove.pwmPort3|block": "Digital (PWM) Port 3",
   "grove.pwmPort5|block": "Digital (PWM) Port 5",
   "grove.pwmPort6|block": "Digital (PWM) Port 6",
