Basic (non functoning) rotary angle get block

--- a/libs/grove/_locales/grove-jsdoc-strings.json
+++ b/libs/grove/_locales/grove-jsdoc-strings.json
@@ -9,5 +9,6 @@
   "grove.LEDPi.setLED": "Turn on an LED at port",
   "grove.PWMPort": "digPWMport",
   "grove.PWMPort.setPWMPort": "Configure a digital (PWM) port",
-  "grove.onButtonPress": "Button Press"
+  "grove.onButtonPress": "Button Press",
+  "grove.rotary": "Rotary Angle"
 }
