--- a/libs/grove/_locales/grove-strings.json
+++ b/libs/grove/_locales/grove-strings.json
@@ -36,7 +36,8 @@
   "grove.pwmPort3|block": "Digital (PWM) Port 3",
   "grove.pwmPort5|block": "Digital (PWM) Port 5",
   "grove.pwmPort6|block": "Digital (PWM) Port 6",
-  "grove.rotary|block": "get rotary angle sensor value at %port",
+  "grove.rotary|block": "rotary angle sensor value at %port",
+  "grove.sound|block": "sound sensor value at port %port",
   "grove|block": "grove",
   "{id:category}Grove": "Grove"
 }
