--- a/libs/grove/_locales/grove-strings.json
+++ b/libs/grove/_locales/grove-strings.json
@@ -38,6 +38,7 @@
   "grove.pwmPort6|block": "Digital (PWM) Port 6",
   "grove.rotary|block": "rotary angle sensor value at %port",
   "grove.sound|block": "sound sensor value at port %port",
+  "grove.ultrasonic|block": "ultrasonic ranger value at port %port",
   "grove|block": "grove",
   "{id:category}Grove": "Grove"
 }
