--- a/libs/grove/_locales/grove-strings.json
+++ b/libs/grove/_locales/grove-strings.json
@@ -25,7 +25,7 @@
   "grove.fadePort3|block": "LED Port 3",
   "grove.fadePort5|block": "LED Port 5",
   "grove.fadePort6|block": "LED Port 6",
-  "grove.moisture|block": "moisture sensor value at port %port",
+  "grove.moisture|block": "moisture sensor value at port %portObj",
   "grove.onButtonPress|block": "on button press",
   "grove.onPort2|block": "LED Port 2",
   "grove.onPort3|block": "LED Port 3",
@@ -37,10 +37,9 @@
   "grove.pwmPort3|block": "Digital (PWM) Port 3",
   "grove.pwmPort5|block": "Digital (PWM) Port 5",
   "grove.pwmPort6|block": "Digital (PWM) Port 6",
-  "grove.rotPort0|block": "Rotary Port 0",
-  "grove.rotary|block": "rotary angle sensor value at %port",
-  "grove.sound|block": "sound sensor value at port %port",
-  "grove.ultrasonic|block": "ultrasonic ranger value at port %port",
+  "grove.rotary|block": "rotary angle sensor value at %portObj",
+  "grove.sound|block": "sound sensor value at port %portObj",
+  "grove.ultrasonic|block": "ultrasonic ranger value at port %portObj",
   "grove|block": "grove",
   "{id:category}Grove": "Grove"
 }
