--- a/libs/core/_locales/core-jsdoc-strings.json
+++ b/libs/core/_locales/core-jsdoc-strings.json
@@ -103,6 +103,12 @@
   "String.concat": "Returns a string that contains the concatenation of two or more strings.",
   "String.concat|param|other": "The string to append to the end of the string.",
   "String.fromCharCode": "Make a string from the given ASCII character code.",
+  "String.includes": "Determines whether a string contains the characters of a specified string.",
+  "String.includes|param|searchValue": "the text to find",
+  "String.includes|param|start": "optional start index for the search",
+  "String.indexOf": "Returns the position of the first occurrence of a specified value in a string.",
+  "String.indexOf|param|searchValue": "the text to find",
+  "String.indexOf|param|start": "optional start index for the search",
   "String.isEmpty": "Returns a value indicating if the string is empty",
   "String.length": "Returns the length of a String object.",
   "String.substr": "Return a substring of the current string.",
@@ -113,6 +119,7 @@
   "loops.forever|param|body": "the code to repeat",
   "loops.pause": "Pause for the specified time in milliseconds",
   "loops.pause|param|ms": "how long to pause for, eg: 100, 200, 500, 1000, 2000",
+  "parseFloat": "Convert a string to a number.",
   "parseInt": "Convert a string to an integer.",
   "pi.rpcCall": "Executes an RPC call into the Raspberry Pi"
 }
