Updated grove blocks and added netsimple interface.
Signed-off-by: William Temple <William.Temple@colorado.edu>

--- a/libs/grove/_locales/grove-strings.json
+++ b/libs/grove/_locales/grove-strings.json
@@ -1,17 +1,16 @@
 {
-  "grove.buzzerBeep|block": "true",
-  "grove.buzzerOff|block": "true",
-  "grove.buzzerOn|block": "true",
-  "grove.getLightValue|block": "true",
-  "grove.getMoistureValue|block": "true",
-  "grove.getRotaryAngleValue|block": "true",
-  "grove.getSoundValue|block": "true",
-  "grove.getTemperatureValue|block": "true",
-  "grove.getUltrasonicRangerValue|block": "true",
-  "grove.initialize|block": "true",
-  "grove.ledOff|block": "true",
-  "grove.ledOn|block": "true",
-  "grove.pollLongButtonPress|block": "true",
-  "grove.pollShortButtonPress|block": "true",
+  "grove.buzzerBeep|block": "beep buzzer on port %port for %ms (ms)",
+  "grove.buzzerOff|block": "turn off buzzer on port %port",
+  "grove.buzzerOn|block": "turn on buzzer on port %port",
+  "grove.getLightValue|block": "light sensor value on port %port",
+  "grove.getMoistureValue|block": "moisture sensor value on port %port",
+  "grove.getRotaryAngleValue|block": "rotary angle sensor value on port %port",
+  "grove.getSoundValue|block": "sound sensor value on port %port",
+  "grove.getTemperatureValue|block": "temperature sensor value on port %port",
+  "grove.getUltrasonicRangerValue|block": "ultrasonic sensor value on port %port",
+  "grove.ledOff|block": "turn off LED on port %port",
+  "grove.ledOn|block": "turn on LED on port %port",
+  "grove.pollLongButtonPress|block": "when the button on port %port is long-pressed",
+  "grove.pollShortButtonPress|block": "when the button on port %port is short-pressed",
   "{id:category}Grove": "Grove"
 }
