--- a/libs/core/_locales/core-strings.json
+++ b/libs/core/_locales/core-strings.json
@@ -11,6 +11,7 @@
   "Array|block": "Array",
   "Math.randomRange|block": "pick random %min|to %limit",
   "Math|block": "Math",
+  "Object|block": "Object",
   "String.charAt|block": "char from %this=text|at %pos",
   "String.compare|block": "compare %this=text| to %that",
   "String.fromCharCode|block": "text from char code %code",
@@ -21,6 +22,7 @@
   "loops.forever|block": "forever",
   "loops.pause|block": "pause (ms) %pause",
   "loops|block": "loops",
+  "parseFloat|block": "parse to number %text",
   "parseInt|block": "parse to integer %text",
   "pi|block": "pi",
   "{id:category}Array": "Array",
@@ -32,6 +34,7 @@
   "{id:category}Math": "Math",
   "{id:category}Network": "Network",
   "{id:category}Number": "Number",
+  "{id:category}Object": "Object",
   "{id:category}Packet": "Packet",
   "{id:category}Pi": "Pi",
   "{id:category}String": "String",
