block definitions for dmx blocks

--- a/libs/dmx/_locales/dmx-strings.json
+++ b/libs/dmx/_locales/dmx-strings.json
@@ -1,3 +1,21 @@
 {
+  "Colors.Black|block": "black",
+  "Colors.Blue|block": "blue",
+  "Colors.Green|block": "green",
+  "Colors.Orange|block": "orange",
+  "Colors.Purple|block": "purple",
+  "Colors.Red|block": "red",
+  "Colors.White|block": "white",
+  "Colors.Yellow|block": "yellow",
+  "dmx.colors|block": "%color",
+  "dmx.createFixture|block": "create fixture %name| with %numChannels| channels",
+  "dmx.rgb|block": "red %red|green %green|blue %blue",
+  "dmx.send|block": "send dmx",
+  "dmx.setBrightnessChannel|block": "fixture %name|'s master brightness channel is: %masterChannel",
+  "dmx.setRGBChannels|block": "fixture %name|'s RGB channels are red: %redChannel| green: %greenChannel| blue: %blueChannel",
+  "dmx.updateFixtureChannel|block": "update fixture %name| channel %numChannels| to %value",
+  "dmx.updateFixtureColor|block": "fixture %name| set color to %color",
+  "dmx.updateFixtureMasterBrightness|block": "fixture %name| set brightness to %brightness",
+  "dmx|block": "DMX",
   "{id:category}Dmx": "Dmx"
 }
