fixture blocks now store to a variable with Fixture class methods

--- a/libs/dmx/_locales/dmx-jsdoc-strings.json
+++ b/libs/dmx/_locales/dmx-jsdoc-strings.json
@@ -1,1 +1,10 @@
-{}
+{
+  "dmx.Fixture.updateChannel": "Update value of a fixture channel",
+  "dmx.Fixture.updateChannel|param|channel": "eg: 1",
+  "dmx.RGBFixture.setBrightness": "Set brightness of an RGB fixture",
+  "dmx.RGBFixture.setBrightness|param|value": "eg: 255",
+  "dmx.RGBFixture.setColor": "Set color of an RGB fixture",
+  "dmx.RGBFixture.setColor|param|value": "eg: #FF0000",
+  "dmx.fixturetype": "Prefab fixture choices",
+  "dmx.fixturetype|param|fixture": "eg: '\"Baisun8ch\"'"
+}
