--- a/libs/dmx/_locales/dmx-strings.json
+++ b/libs/dmx/_locales/dmx-strings.json
@@ -1,11 +1,23 @@
 {
+  "dmx.Colors.Black|block": "black",
+  "dmx.Colors.Blue|block": "blue",
+  "dmx.Colors.Green|block": "green",
+  "dmx.Colors.Indigo|block": "indigo",
+  "dmx.Colors.Orange|block": "orange",
+  "dmx.Colors.Purple|block": "purple",
+  "dmx.Colors.Red|block": "red",
+  "dmx.Colors.Violet|block": "violet",
+  "dmx.Colors.White|block": "white",
+  "dmx.Colors.Yellow|block": "yellow",
   "dmx.Fixture.updateChannel|block": "%dmx(fixture1) update channel %channel| to %value",
   "dmx.RGBFixture.setBrightness|block": "%dmx(light1) set brightness to %value",
-  "dmx.RGBFixture.setColor|block": "%dmx(light1) set color to %value",
+  "dmx.RGBFixture.setColor|block": "%dmx(light1) set color to %value=dmx_colors",
   "dmx.RGBFixtureType.Baisun8ch|block": "Baisun8ch",
   "dmx.RGBFixtureType.Coidak8ch|block": "Coidak8ch",
+  "dmx.colors|block": "%color",
   "dmx.createFixture|block": "create fixture with %numChannels| channels",
   "dmx.createRGBFixture|block": "create RGB light fixture %fixtureType",
+  "dmx.rgb|block": "red %red|green %green|blue %blue",
   "dmx.send|block": "send dmx",
   "dmx|block": "DMX",
   "{id:category}Dmx": "Dmx"
