Integrated visual changes and target modifications to use the new LPC PXT fork.
Signed-off-by: William Temple <William.Temple@colorado.edu>

--- a/libs/core/_locales/core-strings.json
+++ b/libs/core/_locales/core-strings.json
@@ -11,6 +11,7 @@
   "Array|block": "Array",
   "Math.randomRange|block": "pick random %min|to %limit",
   "Math|block": "Math",
+  "Object|block": "Object",
   "String.charAt|block": "char from %this=text|at %pos",
   "String.compare|block": "compare %this=text| to %that",
   "String.fromCharCode|block": "text from char code %code",
@@ -34,6 +35,7 @@
   "{id:category}Math": "Math",
   "{id:category}Network": "Network",
   "{id:category}Number": "Number",
+  "{id:category}Object": "Object",
   "{id:category}Packet": "Packet",
   "{id:category}Pi": "Pi",
   "{id:category}String": "String",
